[gd_scene load_steps=5 format=2]

[ext_resource path="res://ThemeMain.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Cool Text - Deja-Vu 362357651890889.png" type="Texture" id=2]
[ext_resource path="res://Scripts/MenuScene.gd" type="Script" id=3]
[ext_resource path="res://Assets/img_desert.png" type="Texture" id=4]

[node name="MenuScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer"]
margin_right = 648.0
margin_bottom = 107.0
texture = ExtResource( 2 )
stretch_mode = 6

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 137.0
margin_right = 648.0
margin_bottom = 141.0

[node name="labPlay" type="Button" parent="Panel/VBoxContainer"]
margin_top = 171.0
margin_right = 648.0
margin_bottom = 260.0
text = "Play"

[node name="labGarage" type="Button" parent="Panel/VBoxContainer"]
margin_top = 290.0
margin_right = 648.0
margin_bottom = 379.0
text = "Garage"

[node name="labLeaderboards" type="Button" parent="Panel/VBoxContainer"]
margin_top = 409.0
margin_right = 648.0
margin_bottom = 498.0
text = "Leaderboards"

[node name="labSettings" type="Button" parent="Panel/VBoxContainer"]
margin_top = 528.0
margin_right = 648.0
margin_bottom = 617.0
text = "Settings"

[node name="labReset" type="Button" parent="Panel/VBoxContainer"]
margin_top = 647.0
margin_right = 648.0
margin_bottom = 736.0
text = "Reset"
[connection signal="pressed" from="Panel/VBoxContainer/labPlay" to="." method="_on_labPlay_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/labGarage" to="." method="_on_labGarage_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/labSettings" to="." method="_on_labSettings_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/labReset" to="." method="_on_labReset_pressed"]
